# OS_TASKS

./: .gitignore  Readme.md
13th_lab/Src/: CMakeLists.txt  queue.c  queue_cond.c
13th_lab/doc/: ReadMe.md
eighth_task/doc/: ReadMe.md
eighth_task/src/: CMakeLists.txt  client.c  server.c
eleventh_task/doc/: otchet.txt
eleventh_task/src/: vector-avoid-hold-and-wait  vector-deadlock  vector-global-order  vector-nolock  vector-try-wait
fifth_task/doc/: ReadMe.md
fifth_task/src/: 1.c  2.c  3.c  4.c  5.c  6.c  CMakeLists.txt
fourth_task/doc/: ReadME.md
fourth_task/src/: CMakeLists.txt  aspace.c  deleted_array.c  example_2.c  malloc_data.c  malloc_leak.c  null.c
ninth_task/doc/: main-deadlock-global.txt  main-deadlock.txt  main-race.txt  main-signal-cv.txt  main-signal.txt
ninth_task/src/: CMakeLists.txt
second_task/doc/: 1.md  second_task_doc.md
second_task/src/: 1.c  2.c  3.c  4.c  5.c  6.c  CMakeLists.txt
seventh_task/src/: CMakeLists.txt  main.c
sixth_task/doc/: ReadMe.md
sixth_task/src/: CMakeLists.txt  time.h
sixth_task/src/test/crc_tests/: 1.out  2.out  3.out
sixth_task/src/test/csum_tests/: 2.in  2.out  3.out
sixth_task/src/test/fletcher_tests/: 1.out  2.out  3.out
sixth_task/src/test/xor_tests/: 2.in
tenth_task/doc/: task_2.txt  task_3_page.txt  task_4_algorithms.txt  unlink.txt
tenth_task/src/: CMakeLists.txt
third_task/doc/: 3.md
third_task/src/: CMakeLists.txt  memcheck  memory-user.c
twelfth_lab/doc/: ReadMe.md
twelfth_lab/src/: cache  data.txt  graph_data.py  makefile  thinkplot.py
